--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "donyard",
+  "name": "papyrus",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -14,8 +14,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@dev-event/react-native-accordion": "^2.0.4",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "^1.15.14",
     "@react-navigation/bottom-tabs": "^6.0.5",
+    "@react-navigation/drawer": "^6.1.8",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "~43.0.2",
@@ -26,12 +29,28 @@
     "expo-splash-screen": "~0.13.5",
     "expo-status-bar": "~1.1.0",
     "expo-web-browser": "~10.0.3",
+    "lottie-react-native": "^5.0.1",
+    "moment": "^2.29.1",
+    "native-base": "^3.2.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-animatable": "^1.3.3",
+    "react-native-elements": "^3.4.2",
+    "react-native-gesture-handler": "1.10.3",
+    "react-native-image-viewing": "^0.2.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-keychain": "^8.0.0",
+    "react-native-map-clustering": "^3.4.2",
+    "react-native-maps": "^0.29.4",
+    "react-native-modalize": "^2.0.12",
+    "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-web": "0.17.1"
+    "react-native-svg": "^12.1.1",
+    "react-native-swiper": "^1.6.0",
+    "react-native-web": "0.17.1",
+    "react-native-web-swiper": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
